--- a/Windows Final Term Project.csproj
+++ b/Windows Final Term Project.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="UCSearch.cs">
       <SubType>UserControl</SubType>
     </Compile>
