--- a/Windows Final Term Project.csproj
+++ b/Windows Final Term Project.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FHotelOwner.Designer.cs">
       <DependentUpon>FHotelOwner.cs</DependentUpon>
     </Compile>
+    <Compile Include="FLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FLogin.Designer.cs">
+      <DependentUpon>FLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
